# 3DPlatformer

./: .gitignore  .gitmodules  3DPlatformer  3DPlatformer.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
assets/: box.dae
cmake/modules/: FindBullet.cmake  FindENet.cmake  FindIrrlicht.cmake
lib/irrlicht/: CMakeLists.txt  Makefile  cmake_install.cmake
src/: main.cpp  main.h
src/api/engine/: model.cpp  model.h
