cmake_minimum_required(VERSION 3.13.3)
PROJECT(3DPlatformer)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/modules")
set(OpenGL_GL_PREFERENCE "GLVND")

FILE(GLOB SRCS src/*)

ADD_EXECUTABLE(3DPlatformer ${SRCS})

option(USE_SYSTEM_IRRLICHT "Use system Irrlicht?" ON)
option(USE_SYSTEM_BULLET "Use system Bullet?" ON)
option(USE_SYSTEM_ENET "Use system ENet?" ON)
option(USE_SYSTEM_CURL "Use system Curl?" ON)

if(USE_SYSTEM_IRRLICHT)
	find_package(Irrlicht REQUIRED)
	include_directories(${IRRLICHT_INCLUDE_DIR})
	target_link_libraries(3DPlatformer ${IRRLICHT_LIBRARY})
else(USE_SYSTEM_IRRLICHT)
	add_subdirectory("${PROJECT_SOURCE_DIR}/lib/irrlicht")
	include_directories("${PROJECT_SOURCE_DIR}/lib/irrlicht/include")
	target_link_libraries(3DPlatformer irrlicht)
endif(USE_SYSTEM_IRRLICHT)

#if(USE_SYSTEM_BULLET)
	find_package(Bullet REQUIRED)
	include_directories(${BULLET_INCLUDE_DIR})
	target_link_libraries(3DPlatformer ${BULLET_LIBRARIES} -lGL -lGLU)
#else(USE_SYSTEM_BULLET)
#	add_subdirectory("${PROJECT_SOURCE_DIR}/lib/bullet" )
#	include_directories("${PROJECT_SOURCE_DIR}/lib/bullet/src")
#endif(USE_SYSTEM_BULLET)

if(USE_SYSTEM_ENET)
	find_package(ENet REQUIRED)
	include_directories(${ENET_INCLUDE_DIR})
	target_link_libraries(3DPlatformer general ${ENET_LIBRARIES})
else(USE_SYSTEM_ENET)
	OPTION(BUILD_SHARED_LIBS "Use shared libraries" ON)
	add_subdirectory("${PROJECT_SOURCE_DIR}/lib/enet")
	include_directories("${PROJECT_SOURCE_DIR}/lib/enet/include")
	target_link_libraries(3DPlatformer general enet)
endif(USE_SYSTEM_ENET)

if(USE_SYSTEM_CURL)
	find_package(CURL REQUIRED)
	include_directories(${CURL_INCLUDE_DIR})
	target_link_libraries(3DPlatformer general ${CURL_LIBRARIES})
else(USE_SYSTEM_CURL)
	add_subdirectory("${PROJECT_SOURCE_DIR}/lib/curl")
	include_directories("${PROJECT_SOURCE_DIR}/lib/curl/include")
	target_link_libraries(3DPlatformer general CURL)
endif(USE_SYSTEM_CURL)